# triskel

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  builder.bat  version.py
.github/workflows/: build-pytriskel.yml
bindings/: CMakeLists.txt
bindings/java/: CMakeLists.txt  triskel.i
bindings/python/: CMakeLists.txt  build_wheels.sh  pytriskel.cpp  setup.py  version.py
bindings/python/pytriskel/: __init__.py  __init__.pyi  pytriskel.pyi
bindings/python/stubs/: pytriskel.pyi
cmake/: FindCairo.cmake  cpack.cmake  version.cmake
docker/fedora/: imgui.CMakeLists.txt
docker/manylinux/: Dockerfile
lib/: CMakeLists.txt
lib/include/triskel/: triskel.hpp
lib/include/triskel/analysis/: dfs.hpp  lengauer_tarjan.hpp  patriarchal.hpp  sese.hpp  udfs.hpp
lib/include/triskel/graph/: frame.hpp  graph.hpp  igraph.hpp  owning_graph.hpp  subgraph.hpp
lib/include/triskel/layout/: ilayout.hpp  layout.hpp
lib/include/triskel/layout/sugiyama/: eiglsperger.hpp  network_simplex.hpp  sugiyama.hpp  vertex_ordering.hpp  x_coordinate_assignment.hpp
lib/include/triskel/utils/: attribute.hpp  constants.hpp  generator.hpp  version.hpp
lib/src/: triskel.cpp
lib/src/analysis/: dfs.cpp  lengauer_tarjan.cpp  patriarchal.cpp  sese.cpp  udfs.cpp
lib/src/graph/: CMakeLists.txt  frame.cpp  graph.cpp  igraph.cpp  owning_graph.cpp  subgraph.cpp
lib/src/layout/: ilayout.cpp  layout.cpp  phantom_nodes.cpp
lib/src/layout/sugiyama/: CMakeLists.txt  eiglsperger.cpp  network_simplex.cpp  sugiyama.cpp  tamassia.cpp  vertex_ordering.cpp  x_assignment.cpp
lib/src/llvm/: llvm.cpp  triskel.cpp
lib/src/renderer/: CMakeLists.txt  cairo.cpp  imgui.cpp  svg.cpp
scripts/: version.py
test/analysis/: dfs_test.cpp  lengauer_tarjan_test.cpp
test/analysis/sugiyama/: network_simplex_test.cpp
test/datatypes/: rtree_test.cpp
test/graph/: attribute_test.cpp  graph_editor_test.cpp  graph_test.cpp  subgraph_test.cpp
